[project]
name="projects"
version="0.0.0"
requires-python = ">=3.13"
dependencies = [
    "corerl",
    "rl_env",
    "pytest>=8.3.5",
    "pandas~=2.2",
    "pandas-stubs~=2.2",
]

[dependency-groups]
dev = [
    "gymnasium~=1.0",
    "matplotlib~=3.8",
    "pytest>=8.3.5",
    "uv>=0.7.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["epcor_solar"]

[tool.uv.sources]
corerl = { path = "../corerl", editable = true }
rl_env = { path = "../libs/rl_env", editable = true }

# -------------
# -- Pyright --
# -------------

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
    '.worktree/',
]
venvPath = '.'
