[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool]

[tool.setuptools.packages.find]
where = [".", "vendor"]
include = ["coreenv*"]

[tool.setuptools.package-dir]
"coreenv" = "vendor/core-env"

[tool.uv.sources]
coreenv = { git = "ssh://git@github.com/rlcoretech/core-env.git" }


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.pyright]
include = ['.']
exclude = [
    '.venv/',
    'local_tests/',
]
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'

# common overrides
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
enableReachabilityAnalysis = true

# stricter overrides
reportInconsistentConstructor = true
reportMissingParameterType = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnusedClass = true
reportUnusedExpression = true
reportUnusedFunction = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B', 'I']
ignore = [
    'E402',

    # multiple statements on one line. Incompatible with:
    # if cond: break
    'E701',

    # syntax error in forward declaration - incompatible with jaxtyping
    'F722',
]

[project]
name = 'research'
version = '0.0.0'
description = 'A repo to test agent ideas'
authors = []
requires-python = ">=3.13"
readme = 'README.md'
dependencies = [
    'chex~=0.1',
    "coreenv",
    "distrax~=0.1",
    "dm-haiku>=0.0.13",
    "flax>=0.10.4",
    "gymnasium~=1.0",
    'jax>=0.5.3',
    'jaxlib>=0.5.3',
    "jaxtyping~=0.3",
    "matplotlib~=3.10",
    "ml-instrument>=0.5.0",
    "numba~=0.58",
    'numpy~=2.0',
    'optax>=0.2.4',
    "psycopg2-binary>=2.9.10",
    "pydantic~=2.10",
    "pyqt6>=6.9.0",
    "pyyaml>=6.0.2",
    "rlevaluation>=1.1.1",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "tqdm~=4.67",
    "pandas==2.2.3",
]

[dependency-groups]
dev = [
    'commitizen>=4.4.1',
    'pip>=25.0',
    'pre-commit>=4.2.0',
    'pyright>=1.1.397',
    'pytest>=8.3.5',
    'ruff>=0.11.2',
    'uv>=0.6.9',
    "coreenv"
]
