[project]
name = 'research'
version = '0.0.0'
description = 'A repo to test agent ideas'
authors = []
requires-python = ">=3.13"
readme = 'README.md'
dependencies = [
    'chex~=0.1',
    "distrax~=0.1",
    "dm-haiku>=0.0.13",
    "flax>=0.10.4",
    "gymnasium~=1.0",
    'jax>=0.5.3',
    'jaxlib>=0.5.3',
    "jaxtyping~=0.3",
    "matplotlib~=3.10",
    "ml-instrument>=0.5.0",
    "numba~=0.58",
    'numpy~=2.0',
    'optax>=0.2.4',
    "psycopg2-binary>=2.9.10",
    "pydantic~=2.10",
    "pyqt6>=6.9.0",
    "pyyaml>=6.0.2",
    "rl_env",
    "rlevaluation>=1.1.1",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "tqdm~=4.67",
    "pandas==2.2.3",
    "lib_agent",
]

[dependency-groups]
dev = [
    'commitizen>=4.4.1',
    'pip>=25.0',
    'pre-commit>=4.2.0',
    "pylint>=3.3.7",
    "pyright>=1.1.397",
    'pytest>=8.3.5',
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.2",
    'uv>=0.6.9',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
rl_env = { path = "../libs/rl_env", editable = true }
lib_agent = { path = "../libs/lib_agent", editable = true }

# ----------
# -- Ruff --
# ----------

[tool.ruff]
extend = "../standards/python/ruff.toml"

# -------------
# -- Pyright --
# -------------

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'

# ------------
# -- Pylint --
# ------------

[tool.pylint]
[tool.pylint.main]
jobs = 0

[tool.pylint.format]
indent-after-paren = 4
max-line-length = 140
max-module-lines = 1000

[tool.pylint."messages control"]
disable = [
    "abstract-method",
    "arguments-differ",
    "arguments-renamed",
    "bare-except",
    "broad-exception-caught",
    "broad-exception-raised",
    "consider-using-from-import",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "global-statement",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "invalid-overridden-method",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-many-args",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "no-else-continue",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-value-for-parameter",
    "non-ascii-name",
    "not-callable",
    "pointless-string-statement",
    "possibly-used-before-assignment",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "redundant-u-string-prefix",
    "self-assigning-variable",
    "signature-differs",
    "simplifiable-if-statement",
    "subprocess-run-check",
    "super-init-not-called",
    "super-with-arguments",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unbalanced-tuple-unpacking",
    "unidiomatic-typecheck",
    "unknown-option-value",
    "unnecessary-comprehension",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unnecessary-lambda",
    "unpacking-non-sequence",
    "unspecified-encoding",
    "unsubscriptable-object",
    "unused-argument",
    "unused-variable",
    "use-a-generator",
    "useless-import-alias",
    "useless-object-inheritance",
    "useless-parent-delegation",
    "warnings.warn",
    "wrong-import-order",
    "wrong-import-position",
]

# --------------
# -- Deadcode --
# --------------

[tool.deadcode]
exclude = [".venv", "tests"]
ignore-names = ["_*"]
ignore-names-in-files = []

# ----------------
# -- Commitizen --
# ----------------

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# --------------
# -- Coverage --
# --------------

[tool.coverage.run]
omit = ["tests/*"]
concurrency = ["thread", "multiprocessing"]
