[project]
name = "test"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "corerl",
    "docker>=7.1.0",
    "pytest>=8.3.5",
    "rlevaluation>=1.1.1",
]

[tool]
[tool.uv.sources]
corerl = { workspace = true }

[tool.setuptools.packages.find]
include = ["behavior", "e2e"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
