[project]
name = "lib_agent"
version = "0.0.0"
description = ""
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "chex>=0.1.89",
    "distrax>=0.1.5",
    "dm-haiku>=0.0.14",
    "flax>=0.10.6",
    "jax>=0.6.1",
    "lib_utils",
    "ml-instrument>=0.5.0",
    "optax>=0.2.4",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["lib_agent"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B', 'I']
ignore = [
    'E402',

    # multiple statements on one line. Incompatible with:
    # if cond: break
    'E701',

    # syntax error in forward declaration - incompatible with jaxtyping
    'F722',
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
extends='../../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
lib_utils = { path = "../lib_utils", editable = true }
