[project]
name = "lib-events"
version = "0.0.0"
description = "Event bus infrastructure for RLCore microservices"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "lib-defs",
    "lib-utils",
    "pydantic>=2.11.5",
    "pyzmq~=27.1",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.392.post0",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.12",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib_events"]

[tool.ruff]
extend = "../../standards/python/ruff.toml"

[tool.pyright]
extends='../../standards/python/pyright.toml'
include = ['.']
exclude = ['.venv/']
venvPath = '.'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
lib-defs = { path = "../lib_defs", editable = true }
lib-utils = { path = "../lib_utils", editable = true }
