[project]
name = "lib_progress"
version = "0.0.0"
description = "Fast, lightweight progress tracking using logging,"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = []
readme = "README.md"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.392.post0",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.12",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["lib_progress"]

[tool.ruff]
extend = "../../standards/python/ruff.toml"
