[project]
name = "rl_env"
version = "0.133.0"
description = ""
requires-python = ">=3.12,<3.13"
authors = []
dependencies = [
    "gymnasium~=1.0",
    "matplotlib~=3.8",
    "pydantic~=2.9",
    "numpy~=2.0",
    "scipy~=1.13",
    "sympy~=1.13",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["rl_env"]

[tool.ruff]
extend = "../../standards/python/ruff.toml"

[tool.pyright]
extends='../../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
