[project]
name = "rl_env"
version = "0.133.0"
description = ""
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "gymnasium~=1.0",
    "matplotlib~=3.8",
    "pydantic~=2.9",
    "numpy~=2.0",
    "scipy~=1.13",
    "sympy~=1.13",
    "lib-config",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.392.post0",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.12",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["rl_env"]

[tool.ruff]
extend = "../../standards/python/ruff.toml"

[tool.pyright]
extends='../../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
lib-config = { path = "../lib_config" }
