[project]
name = "service_framework"
version = "0.0.0"
description = "Base service framework for RLTune microservices"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "lib-defs",
    "lib-events",
    "lib-utils",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.392.post0",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.12",
    "uv>=0.5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["service_framework"]

[tool.ruff]
extend = "../../standards/python/ruff.toml"

[tool.pyright]
extends='../../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
lib-defs = { path = "../lib_defs", editable = true }
lib-utils = { path = "../lib_utils", editable = true }
lib-events = { path = "../lib_events", editable = true }
